--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   },
   "homepage": "https://github.com/f-reichel/twitter-web#readme",
   "dependencies": {
+    "handlebars": "^4.0.6",
     "hapi": "^16.1.0",
-    "inert": "^4.1.0"
+    "inert": "^4.1.0",
+    "vision": "^4.1.1"
   }
 }
