--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "handlebars": "^4.0.6",
     "hapi": "^16.1.0",
+    "hapi-auth-cookie": "^6.1.1",
     "inert": "^4.1.0",
     "vision": "^4.1.1"
   }
