--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "hapi": "^16.1.0",
     "hapi-auth-cookie": "^6.1.1",
     "inert": "^4.1.0",
+    "joi": "^10.2.0",
     "moment": "^2.17.1",
     "moment-timezone": "^0.5.11",
     "mongoose": "^4.7.8",
