--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "moment": "^2.17.1",
     "moment-timezone": "^0.5.11",
     "mongoose": "^4.7.8",
+    "mongoose-seeder": "^1.2.1",
     "vision": "^4.1.1"
   }
 }
