--- a/package.json
+++ b/package.json
@@ -21,15 +21,22 @@
   },
   "homepage": "https://github.com/f-reichel/twitter-web#readme",
   "dependencies": {
+    "boom": "^4.2.0",
     "handlebars": "^4.0.6",
     "hapi": "^16.1.0",
     "hapi-auth-cookie": "^6.1.1",
     "inert": "^4.1.0",
     "joi": "^10.2.0",
+    "lodash": "^4.17.4",
     "moment": "^2.17.1",
     "moment-timezone": "^0.5.11",
     "mongoose": "^4.7.8",
     "mongoose-seeder": "^1.2.1",
     "vision": "^4.1.1"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^3.2.0",
+    "sync-request": "^4.0.1"
   }
 }
